--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     ],
     "require": {
         "php": "^5.3 || ^7.0",
-        "symfony/console": "^2.3",
+        "symfony/console": "^2.3 || ^3.0",
         "symfony/form": "^2.3",
         "symfony/framework-bundle": "^2.3",
         "symfony/templating": "^2.3",
